[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
rayon = "1.10.0"


[[bin]]
name="23_1_1"
path="./src/23/1/part1.rs"


[[bin]]
name="23_1_2"
path="./src/23/1/part2.rs"


[[bin]]
name="22_1_1"
path="./src/22/1/part1.rs"


[[bin]]
name="22_1_2"
path="./src/22/1/part2.rs"


[[bin]]
name="24_1_1"
path="./src/24/1/part1.rs"


[[bin]]
name="24_1_2"
path="./src/24/1/part2.rs"


[[bin]]
name="23_2_1"
path="./src/23/2/part1.rs"


[[bin]]
name="23_2_2"
path="./src/23/2/part2.rs"

